# Reversi-c-

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  ConsolePlayer.cpp  ConsolePlayer.h  Game.cpp  GameLogic.cpp  GameLogic.h  GameLogic1.cpp  Makefile  Player.cpp  Point.cpp  a.out  compile.txt  info.txt  log.txt  main.cpp  makefile  makefile(2)  sources.txt
Tests/: gtest_main.cpp  test_AIPlayer.cpp  test_AIPlayer.h  test_Board.cpp  test_Board.h  test_Game.cpp  test_Game.h  test_GameLogic1.cpp  test_GameLogic1.h  test_Point.cpp  test_Point.h
include/: AIPlayer.h  Board.h  Client.h  Command.h  CommandsManager.h  ConsolePlayer.h  Game.h  GameLogic.h  GameLogic1.h  GameOnline.h  GameStandard.h  OnlinePlayer.h  Player.h  Point.h
lib/googletest-master/googletest/samples/: #sample1.cc#
src/: AIPlayer.cpp  Board.cpp  Client.cpp  CommandsManager.cpp  ConsolePlayer.cpp  Game.cpp  GameLogic.cpp  GameLogic1.cpp  GameOnline.cpp  GameStandard.cpp  OnlinePlayer.cpp  Player.cpp  Point.cpp  StartCommand.cpp  main.cpp
src/Client/: Client.cpp  Client.h
