cmake_minimum_required(VERSION 3.8)
project(untitled)
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES src/Game.cpp src/ConsolePlayer.cpp src/Point.cpp src/GameLogic1.cpp src/Board.cpp src/Player.cpp src/GameLogic.cpp src/AIPlayer.cpp)
set(TEST_FILES Tests/test_GameLogic1.cpp Tests/test_Point.cpp Tests/test_Point.h Tests/test_GameLogic1.h Tests/test_Game.cpp Tests/test_AIPlayer.cpp Tests/test_Board.h Tests/test_Board.cpp)
add_executable(runMain main.cpp ${SOURCE_FILES})
add_executable(runUnitTests Tests/gtest_main.cpp ${TEST_FILES} ${SOURCE_FILES})
target_link_libraries(runUnitTests gtest gtest_main)
add_test(runUnitTests runUnitTests)
